--- a/Svelte/public/global.css
+++ b/Svelte/public/global.css
@@ -2,21 +2,28 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	background-color: white;
 }
 
 body {
-	color: #333;
+	color: black;
 	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: black;
 	text-decoration: none;
 }
 
+.row {
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+}
+
+/* 
 a:hover {
 	text-decoration: underline;
 }
@@ -60,4 +67,4 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
-}
+} */
