--- a/Svelte/public/global.css
+++ b/Svelte/public/global.css
@@ -1,3 +1,12 @@
+:root {
+	--primary-color: rgb(0, 173, 95);
+	--primary-color-shadow: rgb(0, 132, 72);
+	--secondary-color: rgb(233, 85, 85);
+	--secondary-color-shadow: rgb(150, 68, 68);
+	--box-shadow: 2px 2px 5px 0px rgba(0, 0, 0,  0.55);
+	--box-shadow-active: 2px 2px 5px 0px rgba(0, 0, 0,  0.27);
+}
+
 html, body {
 	position: relative;
 	width: 100%;
