--- a/Svelte/public/global.css
+++ b/Svelte/public/global.css
@@ -9,18 +9,11 @@
 
 * {
 	outline: none;
+	box-sizing: border-box;
   }
-  
-
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background-color: white;
-}
 
 body {
-	color: black;
+	height: 100vh;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
@@ -28,4 +21,9 @@ body {
 a {
 	color: black;
 	text-decoration: none;
+}
+
+
+.nav-main .description {
+	position: absolute;
 }
